# dutato-curriculum-creator

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  README.md  _compat.py  analyze_images.py  chunk_bridge.py  condense.py  enrich_code_curriculum.py  enrich_structure.py  normalize_titles.py  pyproject.toml  setup_db.py  status.py  upload.py
extractors/: __init__.py  code.py  notion.py  notion_api.py  office.py  pdf.py  tabular.py  video.py  web.py
rubrics/: condensation.md  distill.md  exercises.md  exploration.md  gap_analysis.md  learning_objectives.md  review_checklist.md  structuring.md
shared/: __init__.py  build_topic_tree.py  chunk.py  extract.py  ocr.py
